fix off center card + added gradient in back

--- a/mcu-countdown-app/src/App.css
+++ b/mcu-countdown-app/src/App.css
@@ -3,7 +3,6 @@
   max-width: 100vw;
   margin: 0 auto;
   padding: 1rem;
-  overflow-x: hidden;
 }
 
 .header {
@@ -35,8 +34,12 @@
   border-radius: 1rem;
   padding: 2rem;
   text-align: left;
-  margin: 1rem;
+  margin: 1rem auto;
   flex-direction: row;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  overflow-x: auto;
 }
 .card-header{
   line-height: 0.25rem;
